# Amphibious_robot

./: .gitignore  README.md  TODO.md  compile_commands.json
src/amphi_control/: CMakeLists.txt  package.xml
src/amphi_control/include/amphi_control/: drive_control.hpp
src/amphi_description/: CMakeLists.txt  package.xml
src/amphi_description/launch/: spawn_robot.launch.py
src/amphi_description/urdf/: amphi.urdf
src/amphi_description/urdf/meshes/: Amphi_body-v14.stl  left-back-support-v3.stl  left-front-support-v6.stl  right--back-support-v5.stl  right-front-support-v6.stl  shaft-v4.stl
